$Id: ChangeLog,v 1.10 2005-02-09 19:24:41 cmatsuoka Exp $

Stable versions
---------------

2.1.1 ()
	- added more module format specs
	- added MO3 unpacking support
	- added file detection to the XMMS plugin
	- fixed recursive decrunching of module files
	- fixed QNX6 portability issues (by Mike Gorchak)
	- fixed heavy memory leak in the XMMS plugin
	- updated OPL emulation
	- disabled MED loader (nonportable, didn't work well)

2.1.0 (unreleased)
	- Added Takuya Ooura's FFT code
	- Added scope/spectrum analyser modes to xxmp
	- Fixed dynamic driver loading to honour the configuration prefix
	- Added --with-esd option to the configuration script for esd in
	  FreeBSD (reported by Nate Dannenberg <natedac@kscable.com>)
	- Added xxmp panel and module info to XMMS info box
	- Fixed YM3812 emulator output in mono and stereo modes
	- Reordered extra libraries in Makefile.rules to build correctly in
	  IRIX 6.5.10/gcc 2.95.2 (reported by Johan Hattne <hattne@ibg.uu.se>)
	- Added aRts driver
	- Added NAS driver (based on Martin Denn's mpg123 NAS driver)
	- Package only DFSG-compliant files, provide extra files as a patch
	- Added experimental QNX4 driver based on Mike Gorchak's nspmod port
	- Added experimental win32 driver based on Tony Million's mpg123 driver
	- Added NEO Software/Electronic Rats HSC module loader
	- Added Liquid Tracker module 0.0 and 1.0 support
	- Added callback driver for plugins
	- XMMS plugin changed to use the callback driver
	- Added Images Music System support

2.0.4 (20010119):
	- Added driver for synthesized sounds
	- Added Tatsuyuki Satoh's YM3812 emulator
	- Added support to The Player 6.0a modules (using Sylvain "Asle"
	  Chipaux's P60A loader)
	- Added seek capability to XMMS plugin
	- Added (very) experimental AIX driver
	- Added envelope point sanity checks (fixed "Beautiful Ones" IT
	  envelope bug reported by Chris Cox)
	- Added support to dynamic linked drivers (for better packaging)